# hfsexplorer_py

./: .gitignore  AppImageBuilder.yml  BUILD.md  Dockerfile.arm64  Dockerfile.windows  FINDER_LIKE_ENHANCEMENT.md  HFSExplorer.spec  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROGRESS.md  PROJECT_AUDIT.md  README.md  build-windows.sh  build.bat  build.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: USER_MANUAL.md  apfs.md
examples/: apfs_example.py  format_example.py
resources/: README.md
src/: __init__.py
src/cli/: unhfs.py
src/core/: apple_single.py  compression.py  corestorage.py  corestorage_full.py  decmpfs.py  ds_store.py  finder_info.py  gpt_editor.py  hfs_classic.py  hfs_classic_full.py  journal.py  plist.py  resource_fork.py  unified_fs.py
src/core/apfs/: __init__.py  btree.py  container.py  crypto.py  full_support.py  reader.py  space_manager.py  structures.py  transaction.py  volume.py  writer.py
src/core/crypto/: __init__.py  encrypted_volume.py  keybag.py  real_crypto.py
src/core/dmg/: __init__.py  sparse.py
src/core/hfs/: __init__.py  btree.py  btree_mutator.py  constants.py  extractor.py  fast_unicode_compare.py  file_writer.py  fork_filter.py  formatter.py  reader.py  search.py  structures.py  writer.py
src/core/partition/: __init__.py
src/gui/: clipboard_manager.py  i18n.py  main_window.py  styles.py
src/gui/dialogs/: device_dialog.py  help_browser.py  password_dialog.py
src/gui/panels/: info_panels.py
src/gui/views/: view_manager.py
tests/: test_apfs.py  test_apfs_integration.py  test_apfs_writer.py  test_btree.py  test_btree_space.py  test_clipboard.py  test_copy_manager.py  test_dmg.py  test_dmg_support.py  test_e2e_flow.py  test_encryption.py  test_file_operations.py  test_filesystem_support.py  test_filevault2.py  test_formatter.py  test_full.py  test_hfs_volume_header.py  test_new_modules.py  test_partition.py  test_real_crypto.py  test_search.py  test_transaction.py  test_unhfs.py  test_write_integration.py  test_writer.py
tools/: create_test_apfs.py
